--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,9 @@
     --radius-md: calc(var(--radius) - 2px);
     --radius-lg: var(--radius);
     --radius-xl: calc(var(--radius) + 4px);
+    --color-ds-shadow: var(----ds-shadow);
+    --color-ds-gray-1000: var(----ds-gray-1000);
+    --color-ds-gray-700: var(----ds-gray-700);
 }
 
 :root {
@@ -76,6 +79,9 @@
     --sidebar-accent-foreground: oklch(0.205 0 0);
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
+    --ds-gray-700: hsla(0, 0%, 56%, 1);
+    --ds-gray-1000: hsla(0, 0%, 9%, 1);
+    --ds-shadow: rgba(0, 0, 0, 0.08);
 }
 
 .dark {
@@ -110,6 +116,9 @@
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.556 0 0);
+    --ds-gray-700: hsla(0, 0%, 56%, 1);
+    --ds-gray-1000: hsla(0, 0%, 93%, 1);
+    --ds-shadow: rgba(255, 255, 255, 0.145);
 }
 
 @layer base {
